// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Card Props 1`] = `
<a
  className="card text_alignment_left theme_with_button"
  href="http://twitter.com"
  rel="noreferrer"
  target="_blank"
>
  <div
    className="imgix_image card_image"
  >
    <img
      alt="Placeholder image"
      className=""
      data-sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
      data-src="https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop"
      data-srcset="https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=100 100w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=116 116w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=135 135w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=156 156w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=181 181w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=210 210w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=244 244w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=283 283w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=328 328w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=380 380w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=441 441w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=512 512w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=594 594w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=689 689w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=799 799w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=927 927w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1075 1075w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1247 1247w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1446 1446w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1678 1678w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1946 1946w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=2257 2257w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=2619 2619w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=3038 3038w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=3524 3524w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=4087 4087w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=4741 4741w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=5500 5500w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=6380 6380w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=7401 7401w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=8192 8192w"
    />
  </div>
  <div
    className="card_content"
  >
    <h3>
      Utilize B2B networks
    </h3>
    <p>
      Est proident adipisicing reprehenderit in occaecat non. Aute enim minim labore nisi ullamco enim sint Lorem excepteur exercitation anim tempor ad minim ut. Sunt enim aliqua elit occaecat.
    </p>
    <button
      className="button theme_default"
    >
      Et excepteur et est et velit est magna id ad id.
    </button>
  </div>
</a>
`;

exports[`Storyshots Components/Card Theme Default 1`] = `
<a
  className="card text_alignment_left theme_default"
  href="http://twitter.com"
  rel="noreferrer"
  target="_blank"
>
  <div
    className="imgix_image card_image"
  >
    <img
      alt="Placeholder image"
      className=""
      data-sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
      data-src="https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop"
      data-srcset="https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=100 100w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=116 116w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=135 135w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=156 156w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=181 181w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=210 210w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=244 244w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=283 283w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=328 328w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=380 380w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=441 441w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=512 512w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=594 594w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=689 689w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=799 799w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=927 927w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1075 1075w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1247 1247w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1446 1446w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1678 1678w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1946 1946w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=2257 2257w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=2619 2619w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=3038 3038w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=3524 3524w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=4087 4087w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=4741 4741w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=5500 5500w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=6380 6380w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=7401 7401w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=8192 8192w"
    />
  </div>
  <div
    className="card_content"
  >
    <h3>
      Utilize B2B networks
    </h3>
    <p>
      Est proident adipisicing reprehenderit in occaecat non. Aute enim minim labore nisi ullamco enim sint Lorem excepteur exercitation anim tempor ad minim ut. Sunt enim aliqua elit occaecat.
    </p>
  </div>
</a>
`;

exports[`Storyshots Components/Card Theme With Button 1`] = `
<a
  className="card text_alignment_left theme_with_button"
  href="http://twitter.com"
  rel="noreferrer"
  target="_blank"
>
  <div
    className="imgix_image card_image"
  >
    <img
      alt="Placeholder image"
      className=""
      data-sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
      data-src="https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop"
      data-srcset="https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=100 100w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=116 116w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=135 135w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=156 156w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=181 181w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=210 210w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=244 244w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=283 283w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=328 328w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=380 380w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=441 441w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=512 512w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=594 594w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=689 689w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=799 799w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=927 927w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1075 1075w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1247 1247w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1446 1446w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1678 1678w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=1946 1946w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=2257 2257w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=2619 2619w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=3038 3038w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=3524 3524w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=4087 4087w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=4741 4741w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=5500 5500w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=6380 6380w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=7401 7401w,
https://images.prismic.io/ample-prismic-demo/8d1d6aee-977a-458f-8380-d8bbfa88f00f_wexor-tmg-L-2p8fapOA8-unsplash.jpg?auto=format&ixlib=react-9.5.1-beta.1&fit=crop&w=8192 8192w"
    />
  </div>
  <div
    className="card_content"
  >
    <h3>
      Utilize B2B networks
    </h3>
    <p>
      Est proident adipisicing reprehenderit in occaecat non. Aute enim minim labore nisi ullamco enim sint Lorem excepteur exercitation anim tempor ad minim ut. Sunt enim aliqua elit occaecat.
    </p>
    <button
      className="button theme_default"
    >
      Et excepteur et est et velit est magna id ad id.
    </button>
  </div>
</a>
`;
